# weact-stm32h5-threadx-usbx-boilerplate

./: .gitignore  .mxproject  CMakeLists.txt  README.md  STM32H562xx_FLASH.ld  STM32H562xx_RAM.ld  STM32H5_JPEG.code-workspace  WeActSTM32H5.ioc  builder.sh
.github/: copilot-instructions.md
AZURE_RTOS/App/: app_azure_rtos.c  app_azure_rtos.h  app_azure_rtos_config.h
Core/Inc/: app_threadx.h  button_handler.h  cordic.h  dcache.h  exfat_reader.h  ffconf.h  fmac.h  fs_reader.h  jpeg_processor.h  led_status.h  logger.h  main.h  sd_adapter.h  sdmmc.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  time_it.h  tx_user.h  usb.h
Core/Src/: app_threadx.c  button_handler.c  cordic.c  dcache.c  exfat_reader.c  ff_partition.c  ff_threadx.c  fmac.c  fs_reader.c  gpio.c  icache.c  jpeg_processor.c  led_status.c  logger.c  main.c  rtc.c  sd_adapter.c  sd_diskio.c  sdmmc.c  stm32h5xx_hal_msp.c  stm32h5xx_hal_timebase_tim.c  stm32h5xx_it.c  tx_initialize_low_level.S  usb.c
Middlewares/ST/usbx/common/usbx_device_classes/src/: ux_device_class_storage_initialize.c  ux_device_class_storage_start_stop.c
Middlewares/ST/usbx/common/usbx_stm32_device_controllers/: ux_dcd_stm32_callback.c
USBX/App/: app_usbx_device.c  app_usbx_device.h  ux_device_cdc_acm.c  ux_device_cdc_acm.h  ux_device_descriptors.c  ux_device_descriptors.h  ux_device_msc.c  ux_device_msc.h  ux_user.h
bak/: builder.sh  logger.c  logger.h
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
